--- a/book.html
+++ b/book.html
@@ -174,6 +174,9 @@
   <footer class="booking-footer">
     <p>&copy; 2025 Ramya Residency. All rights reserved.</p>
   </footer>
+  <script>
+
+  
 
 document.getElementById("bookingForm").addEventListener("submit", async (e) => {
   e.preventDefault();
@@ -327,8 +330,9 @@ const roomTypeInput = document.getElementById("roomType");
 
         const data = await res.json();
         if (data.success) {
-          alert("✅ Booking successful!");
-          window.location.href = "rooms.html";
+          localStorage.setItem("latestBooking", JSON.stringify(bookingData));
+
+          window.location.href = "booking-confirm.html";
         } else {
           alert("Booking failed: " + data.message);
         }
@@ -338,6 +342,8 @@ const roomTypeInput = document.getElementById("roomType");
       }
     });
   });
+
+  
 </script>
 
  
